--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- header start -->
     <header>
 
         <nav>
@@ -39,7 +40,25 @@
 
 
     </header>
+    <!-- header end -->
     <main>
+        <!-- Feature section Start -->
+        <section class="feature-container">
+            <div class="feature-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="feature-content">
+                <h3 class="feature-title"><span class="feature-title-span1">Quick list</span> <span
+                        class="feature-title-span2">of Our</span> <span class="feature-title-span3">Features</span></h3>
+                <p class="feature-des">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <button class="primary-btn">Explore More</button>
+            </div>
+        </section>
 
     </main>
     <footer>
