facts section facts contents are added

--- a/index.html
+++ b/index.html
@@ -60,6 +60,24 @@
             </div>
         </section>
 
+        <!-- Our Service section -->
+
+        <section class="services">
+
+        </section>
+
+        <!-- Fact Section -->
+        <section class="facts">
+            <div class="facts-content">
+                <h3 class="facts-title">Some Facts</h3>
+                <p class="facts-des">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have
+                    suffered alteration.</p>
+
+            </div>
+
+        </section>
+
     </main>
     <footer>
 
