--- a/index.html
+++ b/index.html
@@ -101,7 +101,22 @@
 
         </section>
 
-        
+        <section class="sponsor">
+            <h3 class="sponsor-title">Our Sponsors</h3>
+            <p class="sponsor-des">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration.
+            </p>
+            <div class="sponsor-img-container">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
+
+
 
     </main>
     <footer>
