--- a/index.html
+++ b/index.html
@@ -63,6 +63,40 @@
         <!-- Our Service section -->
 
         <section class="services">
+            <div class="services-content">
+                <h3 class="service-title">Features you will <br>love & enjoy</h3>
+                <p class="service-des">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <div class="service-card">
+                    <h4 class="service-card-title">Dexktop & Mobile Version</h4>
+                    <p class="service-card-des">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="service-card">
+                    <h4 class="service-card-title">Dexktop & Mobile Version</h4>
+                    <p class="service-card-des">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="service-card">
+                    <h4 class="service-card-title">Dexktop & Mobile Version</h4>
+                    <p class="service-card-des">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="service-card">
+                    <h4 class="service-card-title">Dexktop & Mobile Version</h4>
+                    <p class="service-card-des">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+
+            <div class="service-img">
+                <img src="images/architect.png" alt="">
+                <div class="ten-years-badge">
+                    <h2>10+ years</h2>
+                    <p>Experience</p>
+                </div>
+            </div>
 
         </section>
 
